--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,8 @@
 
 body {
 	background-color: #040404;
-	overflow-x:hidden;
-	overflow-y:hidden;
+	/* overflow-x:hidden;
+	overflow-y:hidden; */
 }
 
 h1 {
